add search feature

--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -17,6 +17,10 @@
         <li class="nav-item <%= pageTitle === 'Friends' ? 'active' : '' %>">
           <a class="nav-link" href="/friends">Friends</a>
         </li>
+
+        <li class="nav-item <%= pageTitle === 'Search' ? 'active' : '' %>">
+          <a class="nav-link" href="/search">Find People</a>
+        </li>
       <% } else { %>
         <li class="nav-item <%= pageTitle === 'Login' ? 'active' : '' %>">
           <a class="nav-link" href="/login">Login</a>
